created get_hmdb_accession_dict.py CLT

--- a/generate-hmdb-accession-dict.ipynb
+++ b/generate-hmdb-accession-dict.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5abd9c9",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0067e7fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209.76s\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------- user input params --------------------\n",
     "path_to_hmdb_xml = \"/Users/dteng/Documents/zdata/hmdb_metabolites_14jun2022.xml\"\n",
@@ -54,13 +62,15 @@
     "\n",
     "# parse stdout output into a list of lists\n",
     "c = output_str.split(\"\\n\")\n",
+    "c2 = []\n",
     "for i in range(len(c[:-1])):\n",
-    "    new_line = c[i].replace(\" \", \"\").replace(\"\\n\", \"\").replace(\"<accession>\", \"\").replace(\"</accession>\", \"\").split(\":\")\n",
-    "    new_line[0] = int(new_line[0])\n",
-    "    c[i] = new_line\n",
+    "    if len(c[i]) > 0:\n",
+    "        new_line = c[i].replace(\" \", \"\").replace(\"\\n\", \"\").replace(\"<accession>\", \"\").replace(\"</accession>\", \"\").split(\":\")\n",
+    "        new_line[0] = int(new_line[0])\n",
+    "        c2.append(new_line)\n",
     "\n",
     "# put in df to sort\n",
-    "df = pd.DataFrame(data=c, columns=[\"line_num\", \"line_value\"]).sort_values(by=\"line_num\").reset_index(drop=True)\n",
+    "df = pd.DataFrame(data=c2, columns=[\"line_num\", \"line_value\"]).sort_values(by=\"line_num\").reset_index(drop=True)\n",
     "m = df.values\n",
     "\n",
     "temp_ls = \"|\".join(m[1:, 1]).split(\"|<metabolite>|\")\n",
